feat: update readme and system name

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <title>OldVisOnline</title>
-  <meta name="description" content="OldVisOnline">
+  <title>OldVis Gallery</title>
+  <meta name="description" content="OldVis Gallery">
 </head>
 <body class="font-sans dark:text-gray-300 dark:bg-hex-121212">
   <div id="app"></div>
